<resources>
    <string name="app_name">Wenshi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_application_id" translatable="false">145497706115669</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb145497706115669</string>
    <string name="twitter_consumer_key" translatable="false">yTFXgyZ62aV6sBdqAOxaMhzNp</string>
    <string name="twitter_consumer_secret" translatable="false">Vv3nfpRJtK31NVE7mHgjWhuUP7nLyLiKvtukNPQEJnhN6w0MQB</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">SETTINGS</string>
    <string name="action_signout">Sign Out</string>
    <string name="label_driver">Driver</string>
    <string name="label_rider">Rider</string>
    <string name="label_logoDescritop">Wenshi Mobile App</string>
    <string name="button_start">Get Started</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="sign_in_cancelled">Sign in Cancelled</string>
    <string name="no_internet_connection">No Active Internet Connection</string>
    <string name="unknown_error">unknown_error</string>
    <string name="unknown_sign_in_response">unknown_sign_in_response</string>
    <string name="cancelTrip">Cancel trip</string>
    <string name="request_winsh">Request Wenshi</string>
    <string name="order_now">Order Now</string>
    <string name="request_wenshi">Request Wenshi</string>
    <string name="bottom_sheet_content">Content</string>
    <string name="request_winsh_btn">Request Now!</string>
    <string name="vehicle">Vehicles</string>
    <string name="service">Service</string>
    <string name="drop_off_location">DROP OFF</string>
    <string name="choose_service_btn">CHOOSE SERVICE</string>
    <string name="button_call">Call</string>
    <string name="textView_help_Info">Help Info</string>
    <string name="textView_rate_and_charges">Rate and Charges</string>
    <string name="textView_about">About</string>
    <string name="textView_invite">Invite Friends</string>
    <string name="textView_family_view">Family View</string>
    <string name="textView_no_historic">No Trips found</string>
    <string name="textView_no_vehicle">No Vehicles found</string>
    <string name="textView_payment_page_label">Current Payment Method</string>
    <string name="radioButton_payment_cash">Cash</string>
    <string name="radioButton_payment_credit">Add Credit Card</string>
    <string name="button_payment_submit">Submit</string>
    <string name="textView_CC_entry_label">Credit Card Payment</string>
    <string name="textView_CC_entry_card_number">Card Number(XXXX XXXX XXXX XXXX)</string>
    <string name="textView_CC_entry_card_date">Expiry Date(MM/YY)</string>
    <string name="textView_CC_entry_card_cvv">CVV</string>
    <string name="textView_CC_entry_card_name">Name On Card</string>
    <string name="editText_CC_entry_card_number">Card Number</string>
    <string name="editText_CC_entry_card_date">Date</string>
    <string name="editText_CC_entry_card_cvv">CVV</string>
    <string name="editText_CC_entry_card_name">Name</string>
    <string name="textView_CC_entry_card_numberError">Wrong Number</string>
    <string name="textView_CC_entry_card_dateError">Wrong Date</string>
    <string name="textView_CC_entry_card_cvvError">Wrong CVV</string>
    <string name="textView_CC_entry_card_nameError">Wrong Name</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="accept">Accept</string>
    <string name="textView_profile_userName_label">Name *</string>
    <string name="textView_profile_email_label">Email *</string>
    <string name="textView_profile_mobile_label">Mobile *</string>
    <string name="textView_profile_address_label">Address</string>
    <string name="new_request">NEW REQUEST</string>
    <string name="textView_driverProfile_carType_label">Wensh type</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="textView_vehicle_addNew">Add new Vehicle</string>
    <string name="button_new_vehicle">Add Vehicle</string>
    <string name="textView_vehicle_saved_label">New car saved successfully</string>
    <string name="eta">ETA</string>
    <string name="min">min</string>
    <string name="reqwestingWenshi">Requesting Wenshi..</string>
    <string name="textView_family_addNew">Add Family Member</string>
    <string name="arrived">ARRIVED</string>
    <string name="textView_family_name_hint">Name</string>
    <string name="textView_family_mobile_hint">Mobile</string>
    <string name="textView_family_member_label">Family Member</string>
    <string name="textView_family_member_location">Member Location</string>
    <string name="editText_family_member_location">Current Location</string>
    <string name="textView_family_payment">Payment Method</string>
    <string name="textView_family_reason">Reason of the issue</string>
    <string name="takePhoto">TAKE PHOTOS</string>
    <string name="start">START</string>
    <string name="no_location_data_provided">No Location Provider Available</string>
    <string name="service_not_available">No Service Available</string>
    <string name="invalid_lat_long_used">Invalid Location Data</string>
    <string name="no_address_found">No Address Found</string>
    <string name="confirm_pickup">CONFIRM PICKUP</string>
    <string name="choose">Choose</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_destination">CONFIRM DROP OFF</string>
    <string name="pickup">PICK UP</string>
    <string name="destination">Destination</string>
    <string name="carbroke">Car Broke-down</string>
    <string name="accedent">Accident</string>
    <string name="CarType">Car Type</string>
    <string name="carModel">Car Model</string>
    <string name="distance">Distance</string>
    <string name="PaymentMethod">Payment</string>
    <string name="fare">Fare</string>
    <string name="find_driver">FIND DRIVER</string>
    <string name="driver_confirmed_onrout">Driver Confirmed and on Rout</string>
    <string name="call_driver">Call Driver</string>
    <string name="callDriver">Call the Driver</string>
    <string name="Login">Login</string>
    <string name="fui_default_toolbar_title" translatable="false">@string/app_name</string>
    <string name="fui_progress_dialog_loading" translation_description="Loading text in dialog">Loading…</string>
    <string name="fui_sign_in_default" translation_description="Button text to sign in">Sign in</string>
    <string name="fui_idp_name_google">Google</string>
    <string name="fui_idp_name_facebook">Facebook</string>
    <string name="fui_idp_name_twitter">Twitter</string>
    <string name="fui_provider_name_email">Email</string>
    <string name="fui_provider_name_phone">Phone</string>
    <string name="fui_sign_in_with_google" translation_description="Sign in button text">Google</string>
    <string name="fui_sign_in_with_facebook" translation_description="Sign in button text">Facebook</string>
    <string name="fui_sign_in_with_twitter" translation_description="Sign in button text">Twitter</string>
    <string name="fui_sign_in_with_email" translation_description="Sign in button text">Email</string>
    <string name="fui_sign_in_with_phone" translation_description="Sign in button text">Phone</string>
    <string name="fui_next_default" translation_description="Button text to continue">Next</string>
    <string name="fui_email_hint" translation_description="Hint in email input field">Email</string>
    <string name="fui_phone_hint" translation_description="Hint for phone input field">Phone Number</string>
    <string name="fui_password_hint" translation_description="Hint for password input field">Password</string>
    <string name="fui_required_field" translation_description="Inline error for required field">You can\'t leave this empty.</string>
    <string name="fui_invalid_email_address" translation_description="Inline error for invalid email address">That email address isn\'t correct</string>
    <string name="fui_missing_email_address" translation_description="Inline error for empty email address in input field">Enter your email address to continue</string>
    <string name="fui_progress_dialog_checking_accounts" translation_description="Progress dialog text while checking for existing accounts">Checking for existing accounts…</string>
    <string name="fui_title_register_email" translation_description="Title for signup form">Sign up</string>
    <string name="fui_name_hint" translation_description="Hint for last name input field">First &amp; last name</string>
    <string name="fui_button_text_save" translation_description="Button text to save input form">Save</string>
    <string name="fui_progress_dialog_signing_up" translation_description="Dialog text while waiting for server's signup response">Signing up…</string>
    <plurals name="fui_error_weak_password" translation_description="Inline error for weak password">
        <item quantity="one" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item>
        <item quantity="other" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item>
    </plurals>
    <string name="fui_email_account_creation_error" translation_description="Inline error for signup failure">Email account registration unsuccessful</string>
    <string name="fui_error_user_collision" translation_description="Inline error when user signs up using an existing email account">An account already exists with that email address.</string>
    <string name="fui_terms_of_service" translation_description="Link text to web url containing the app's terms of service">Terms of Service</string>
    <string name="fui_privacy_policy" translation_description="Link text to web url containing the app's privacy policy">Privacy Policy</string>
    <string name="fui_email_field_name" translatable="false">email_field</string>
    <string name="fui_title_welcome_back_idp_prompt" translatable="false">@string/fui_sign_in_default</string>
    <string name="fui_title_welcome_back_password_prompt" translatable="false">@string/fui_sign_in_default</string>
    <string name="fui_welcome_back_idp_header" translation_description="Inline subtitle to users whose signup was interrupted since an existing account was detected">You already have an account</string>
    <string name="Profile">Profile</string>
    <string name="history">Account History</string>
    <string name="sedan">Sedan</string>
    <string name="SUV">SUV</string>
    <string name="textView_vehicle_type">Type</string>
    <string name="textView_vehicle_color">Color</string>
    <string name="textView_vehicle_year">Year</string>
    <string name="textView_vehicle_model">Model</string>
    <string name="textView_vehicle_make">Make</string>
    <string name="delete">Delete</string>
</resources>